lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/buffer_append_int/buffer_append_int3/buffer_append_int3.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_append_int/buffer_append_int3/buffer_append_int3.c:20:23: error: use of undeclared identifier 's__b'
    buffer_append_int(s__b ,b_val );
                      ^
1 error generated.
